Fixed Image Alignment

--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@
 .character-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: start;
   list-style-type: none;
   margin: 0;
   padding: 0;
